<resources>
    <string name="app_name">KeepSafe</string>
    <string name="shr_app_name">KeepSafe</string>
    <string name="shr_hint_password">Senha</string>
    <string name="shr_hint_username">Email</string>
    <string name="shr_button_next">Acessar</string>
    <string name="label_login_email">Email</string>
    <string name="label_login_password">Senha</string>
    <string name="label_login">Login</string>
    <string name="label_register">Registro\n</string>
    <string name="label_register_name">Nome</string>
    <string name="label_register_cpf">CPF</string>
    <string name="label_birthday_cpf">Data de nascimento\n</string>
    <string name="label_phone_cpf">Celular</string>
    <string name="label_register_password">Senha</string>
    <string name="label_register_password_confirm">Confirmar a senha</string>
    <string name="label_register_phone">Celular</string>
    <string name="label_register_birthday">Data de aniversario</string>
    <string name="label_register_email">Email</string>
    <string name="label_forgotpassword_email">Insira seu email</string>
    <string name="forgot_password">Esqueci minha senha</string>
    <string name="Home_text">Home</string>
    <string name="Register_Card">Cadastrar Cartão</string>
    <string name="Hire_Locker">Alugar um Armário</string>
    <string name="Leave">Sair</string>
    <string name="home_screen_text">Home</string>
    <string name="maps_screen_text">Mapa\n</string>
    <string name="config_screen_text">Configurações</string>
    <string name="welcome">Home</string>
    <string name="content_description_media">cartão de credito.</string>
    <string name="titleCard">Cartão de credito</string>
    <string name="secondary_text">Você ainda não tem nenhum cartão registrado. Deseja registrar?</string>
    <string name="registerCard">REGISTRAR</string>
    <string name="label_DateOfBirthCard">Data de Nascimento</string>
    <string name="label_phoneCard">phone</string>
    <string name="label_cpfCard">CPF</string>
    <string name="label_fullName">Nome Completo</string>
    <string name="label_cvvCard">CVV</string>
    <string name="label_validDateCard">validade</string>
    <string name="btn_cadastarCartão">Cadastrar Cartão</string>
    <string name="label_numberCard">Número Do Cartão</string>
    <string name="screen_register_card">Cadastrar cartão</string>
    <string name="userNotSigned">Deseja acessar todas funcionalidades?</string>
    <string name="userHomeToLogin">Faça login.</string>
    <string name="signInAnonymous">Entrar sem login</string>
    <string name="config">Configurações\n</string>
    <string name="signOutUser">Sair do app</string>
    <string name="text_fullscreen_modal">111</string>
    <string name="text_modal">111</string>
    <string name="confirmButton">Confirmar</string>
    <string name="cancelButton">Cancelar</string>
    <string name="confirmButtonLocker">Confirmar armario\n</string>
    <string name="btn_CadastrarCartao">Cadastrar Cartão</string>
    <string name="btnConfirmEmail">Enviar e-mail</string>
    <string name="btnLeaveEmail">Voltar</string>
    <string name="btn_Acessar">Acessar</string>
    <string name="Btn_Login">Login</string>
    <string name="_2_photo">2 Fotos</string>
    <string name="_1_photo">1 Foto</string>
    <string name="take_photo">Tirar foto</string>
    <string name="save_photos">Salvar Fotos</string>
    <string name="select_option">Selecione uma opção:</string>
    <string name="open_locker">Abrir Momentaneamente</string>
    <string name="end_location">Encerrar Locação</string>
    <string name="approach_nfc_tag">Aproxime a tag NFC ao dispositivo</string>
    <string name="register">Registrar</string>
    <string name="access">Acessar</string>
    <string name="manage_location">Criar nova locação</string>
    <string name="create_new_location">Gerenciar Locações</string>
    <string name="open_location">Abrir Locação</string>
    <string name="save_images">Salvar Imagens a locação</string>
    <string name="confirm_closure">Confirmar Encerramento</string>
</resources>