<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:padding="24dp"
        android:paddingTop="16dp"
        android:gravity="center"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="48dp"
            android:layout_marginTop="48dp"
            android:text="@string/label_login"
            android:textColor="@color/text"
            android:textAllCaps="false"
            android:textSize="32sp"
            android:textStyle="bold"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutet_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/label_login_email"
            app:boxStrokeColor="@color/primary"
            app:hintTextColor="@color/primary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutet_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/label_login_password"
            app:endIconMode="password_toggle"
            app:boxStrokeColor="@color/primary"
            app:hintTextColor="@color/primary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/forgotPasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/forgot_password"
            android:layout_marginBottom="20dp"
            android:textColor="@color/primary"
            android:textSize="12sp"
            android:background="@color/secondary"
            style="@style/Widget.MaterialComponents.Button.TextButton"
        />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/access"
            android:textSize="18sp"
            android:background="@drawable/background_button"
            android:textColor="@color/secondary"
            android:layout_marginBottom="20dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInAnonymous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signInAnonymous"
            android:textSize="18sp"
            android:background="@drawable/background_button"
            android:textColor="@color/secondary"
            android:layout_marginBottom="20dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpLinkButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="18sp"
            android:background="@drawable/white_background_button"
            android:textColor="@color/primary"
        />

    </LinearLayout>
</ScrollView>