<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:backgroundTint="@color/primary"
            app:subtitleTextColor="@color/secondary"
            app:title="KeepSafe" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="23sp"
        android:orientation="vertical"
        android:gravity="center">

            <TextView
                android:id="@+id/txtOpcoes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_option"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:layout_marginBottom="16dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAbrirMomentaneamente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_locker"
                android:textSize="18sp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/background_button"
                android:textColor="@color/secondary"/>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEncerrarLocacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/end_location"
                android:textSize="18sp"
                android:background="@drawable/background_button"
                android:textColor="@color/secondary"/>

            <Button
                android:id="@+id/btnConfirmarEncerramento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_closure"
                android:visibility="gone"/>
    </LinearLayout>

</LinearLayout>