<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:padding="24dp"
        android:paddingTop="16dp"
        android:gravity="center"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/Cardimage"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:src="@drawable/keep_safe_logo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="48dp"
            android:layout_marginTop="48dp"
            android:text="@string/forgot_password"
            android:textColor="@color/text"
            android:textAllCaps="false"
            android:textSize="32sp"
            android:textStyle="bold"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutet_forgotpassword_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/label_forgotpassword_email"
            app:boxStrokeColor="@color/primary"
            app:hintTextColor="@color/primary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_forgotpassword_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirmButtonForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/background_button"
            android:text="@string/btnConfirmEmail"
            android:textSize="18sp"
            android:textColor="@color/secondary" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/backLoginButton"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:text="@string/btnLeaveEmail"
            android:textSize="18sp"
            android:background="@drawable/background_button"
            android:textColor="@color/secondary"
            />

    </LinearLayout>
</ScrollView>