<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/Cardimage"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:src="@drawable/cartaofoto"
        android:layout_marginBottom="50dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_numberCard"
            android:background="@color/white"
            android:textColorHint="@color/black"
            android:inputType="number"
            android:maxLines="1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etExpirationDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_validDateCard"
                android:layout_marginEnd="20dp"
                android:background="@color/white"
                android:textColorHint="@color/black"
                android:inputType="number"
                android:maxLines="1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCVV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:hint="@string/label_cvvCard"
                android:background="@color/white"
                android:textColorHint="@color/black"
                android:inputType="number"
                android:maxLines="1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_fullName"
            android:inputType="text"
            android:maxLines="1"
            android:background="@color/white"
            android:textColorHint="@color/black"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="50dp"
        android:id="@+id/btnRegisterCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_CadastrarCartao"
        android:textSize="18sp"
        android:background="@drawable/background_button"
        android:textColor="@color/secondary"
        />



</LinearLayout>