<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:backgroundTint="@color/primary"
            app:subtitleTextColor="@color/secondary"
            app:title="Configurações" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_gravity="center"
        app:trackColor="@color/secondary"
        app:indicatorColor="@color/primary"
        app:indicatorSize="30dp"
        app:trackThickness="2dp"
        />

    <LinearLayout
        android:id="@+id/signOutView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signOutUser"
            android:textSize="18sp"
            android:background="@drawable/background_button"
            android:textColor="@color/secondary"
            android:layout_marginTop="50sp"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/contentViewUserNotSigned"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userNotSigned"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUserHomeToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userHomeToLogin"
            android:textColor="@color/primary"
            style="?attr/borderlessButtonStyle"
            android:layout_marginTop="16dp"
            />


    </LinearLayout>


</FrameLayout>